@@ -31,6 +31,7 @@
 - Fixed: Deprecated CMC functions cause Visual studio 2012 rc compile error (issue 156)
 - Fixed: Need to add "SMTP:" to the 'emailTo' address for (S)MAPI (issue 140).
 - Fixed: HTTPS certificate problem (issue 151)
+- Fixed: Resource leak in CrashRpt (issue 160)
 
 
 --- Ver. 1.3.0 ---
